# VC2.0-platform

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  project-plan.md   tsconfig.base.json  tsconfig.json  turbo.json
apps/api-gateway/: package.json  tsconfig.json
apps/api-gateway/src/: app.ts  index.ts
apps/api-gateway/src/config/: env.ts
apps/api-gateway/src/lib/: auth.ts  crypto-client.ts  db.ts
apps/api-gateway/src/modules/api-keys/: routes.test.ts  routes.ts
apps/api-gateway/src/modules/credentials/: routes.test.ts  routes.ts
apps/api-gateway/src/modules/organizations/: routes.test.ts  routes.ts
apps/api-gateway/src/modules/presentations/: routes.ts
apps/api-gateway/src/modules/schemas/: routes.test.ts  routes.ts
apps/api-gateway/src/modules/templates/: routes.test.ts  routes.ts
apps/api-gateway/src/plugins/: auth-routes.ts  guards.ts  permissions.ts
apps/api-gateway/src/types/: fastify.d.ts
apps/crypto-engine/: Cargo.toml  build.rs
apps/crypto-engine/proto/: crypto_engine.proto
apps/crypto-engine/src/: main.rs
apps/web-platform/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web-platform/app/: layout.jsx  layout.tsx  page.jsx  page.tsx
apps/web-platform/app/app/: layout.tsx  page.tsx
apps/web-platform/app/app/invitations/: page.tsx
apps/web-platform/app/app/issue/: page.tsx
apps/web-platform/app/sign-in/: page.tsx
apps/web-platform/app/sign-up/: page.tsx
apps/web-platform/lib/: api.ts  auth-client.ts
docker/: docker-compose.yml
docker/openbao/: init.sh
(+6 files in other folders)
