[package]
name = "crypto-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5"
ed25519-dalek = "2"
prost = "0.13"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
